--- a/atv 08-04-2016/index.html
+++ b/atv 08-04-2016/index.html
@@ -31,6 +31,7 @@
 						<div class="idBlog">
 							<img src="imagens/idBlog.png"alt="Fã Club Iron Maiden">
 							<p> Autor : Marcelo C. Mussel </p>
+							<a class="voltar" href="inicio.html"> Voltar </a>
 						</div>
 						<div class="conteudo">
 							<img src="imagens/home.jpg"alt="Fã Club Iron Maiden">
